feat: Use distroless as base image
Busybox image often has security issues in glibc, using distroless should reduce these.

--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build image
       run: |
         docker buildx build \
-          --platform linux/arm64/v8,linux/amd64,linux/arm/v5,linux/arm/v6,linux/arm/v7,linux/ppc64le,linux/s390x \
+          --platform linux/arm64/v8,linux/amd64,linux/arm,linux/ppc64le,linux/s390x \
           --build-arg GO_VERSION=$(grep -m 1 go go.mod | cut -d\  -f2) \
           -t ghcr.io/jimmidyson/configmap-reload:${{ github.event.pull_request.head.sha }} \
           .
